styles/projects.css
/* Layout for one project listing */
.project {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    align-items: center;
    justify-content: space-evenly;
    text-align: left;
    box-sizing: border-box;
    width: 100vw;
    max-width: 100%;
    padding: 2em 0 2em 0;
}

/* Give the front page emoji a spin! */
#project-front > h1 {
    -webkit-animation:spin 10s linear infinite;
    -moz-animation:spin 10s linear infinite;
    animation:spin 10s linear infinite;
}
@-moz-keyframes spin { 
    100% { -moz-transform: rotate(360deg); } 
}
@-webkit-keyframes spin { 
    100% { -webkit-transform: rotate(360deg); } 
}
@keyframes spin { 
    100% { 
        -webkit-transform: rotate(360deg); 
        transform:rotate(360deg); 
    } 
}

/* Reverse display order for project even */
.project.even {
    flex-direction: row-reverse;
}

/* Set background color to alternate for each project */
.project.odd {
    background-color: var(--base-bg);
}
.project.even {
    background-color: var(--sec-bg);
}

/* Center projects without images */
.project.noimage {
    text-align: center;
}
.project.noimage > .project-desc {
    display: flex;
    flex-direction: column;
    align-items: center;
    box-sizing: border-box;
}

/* Limit project description and image size */
.project-desc {
    width: 45vw;
    max-width: 45%;
    box-sizing: border-box;
    padding: 0 4em 0 4em;
}
.project-img {
    width: 40em;
    box-sizing: border-box;
    padding: 0 4em 0 4em;
}

/* Display project vertically on mobile */
@media (max-width: 900px) {
    .project {
        flex-direction: column;
        align-items: center;
        row-gap: 1em;
    }
    .project-desc, .project-img {
        width: 75vw;
        max-width: 75%;
        padding: 0;
    }
}

/* Give project images rounded corners and outlines */
.odd > .project-img > img {
    border-radius: 4px;
    box-shadow: 1em 1em 0px var(--sec-bg);
    transition: 200ms;
}
.even > .project-img > img {
    border-radius: 4px;
    box-shadow: -1em 1em 0px var(--base-bg);
    transition: 200ms;
}

/* Animate project images when hovered over */
.odd > .project-img > img:hover {
    box-shadow: 0px 0px 0px 0.5em var(--sec-bg);
}
.even > .project-img > img:hover {
    box-shadow: 0px 0px 0px 0.5em var(--base-bg);
}

